--- a/index.html
+++ b/index.html
@@ -1,9 +1,30 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        
-    </head>
-    <body>
-        <script  src = "js/main.js"></script>
-    </body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Collect Coins</title>
+  </head>
+  <body>
+    <div id="top-bar">
+      <div id="info-bar">
+        <div id="levels">
+          <div id="circle1"></div>
+          <div id="circle2">
+            <div style="font-size: 22px; text-align: center; margin-top: 25px">
+              Level 2
+            </div>
+          </div>
+          <div id="circle3"></div>
+        </div>
+        <div style="font-size: 30px; margin-top: 30px">01:23</div>
+        <div style="font-size: 30px; margin-top: 30px">2 coins</div>
+      </div>
+      <button>Start Game</button>
+    </div>
+    <div id="game-border"></div>
+    <script src="js/main.js"></script>
+  </body>
 </html>
