--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
           <div id="circle3"></div>
         </div>
         <div style="font-size: 30px; margin-top: 30px">01:23</div>
-        <div style="font-size: 30px; margin-top: 30px">2 coins</div>
+        <div id="myScore" style="font-size: 30px; margin-top: 30px">-- Coins</div>
       </div>
-      <button>Start Game</button>
+      <button id="startGame">Start Game</button>
     </div>
     <div id="game-border"></div>
     <script src="js/main.js"></script>
