change character functionality add

--- a/Home.html
+++ b/Home.html
@@ -11,15 +11,16 @@
             <label> Name </label>
             <input id="playerName" type="text">
             <br>
-            <input type="radio" name="chara">
-            <input type="radio" name="chara">
+            <input type="radio" name="char" id = "rat">
+            <img src="assets/rat.png" height="100px">
             <br>
-            <img src="assets/myCharacter.jpg">
-            <img src="assets/myCoin.png">
+            <input type="radio" name="char" id = "cat" >
+            <img src="assets/cat.png" height="100px">
             <br>
-            <button id="startbtn"><a href="index.html">Play</button>
+            <br>
+           <input type="button" id="startbtn" value="play">
         </form>
-        <script  src = "js/main.js"></script>
+        <script  src = "js/home.js"></script>
 
     </body>
 </html>
