--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div id="circle3"></div>
         </div>
         <div style="font-size: 30px; margin-top: 30px">01:23</div>
-        <div id="myScore" style="font-size: 30px; margin-top: 30px">-- Coins</div>
+        <div id="myScore" style="font-size: 30px; margin-top: 30px">Score : -- Coins</div>
       </div>
       <button id="startGame">Start Game</button>
     </div>
