--- a/index.html
+++ b/index.html
@@ -11,16 +11,26 @@
     <div id="top-bar">
       <div id="info-bar">
         <div id="levels">
-          <div id="circle1"></div>
+          <div id="circle1">
+            <div id="level1">
+              Level 1
+            </div>
+          </div>
           <div id="circle2">
-            <div style="font-size: 22px; text-align: center; margin-top: 25px">
+            <div id="level2">
               Level 2
             </div>
           </div>
-          <div id="circle3"></div>
+          <div id="circle3">
+            <div id="level3">
+              Level 3
+            </div>
+          </div>
         </div>
         <div style="font-size: 30px; margin-top: 30px">01:23</div>
-        <div id="myScore" style="font-size: 30px; margin-top: 30px">-- Coins</div>
+        <div id="myScore" style="font-size: 30px; margin-top: 30px">
+          -- Coins
+        </div>
       </div>
       <button id="startGame">Start Game</button>
     </div>
