--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
       <br />
       <input type="button" id="startbtn" value="play" />
     </form>
-    <script src="js/index.js"></script>
+    <script src="js/home.js"></script>
   </body>
 </html>
