--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link type="stylesheet" href="css/style.css" />
   </head>
   <body>
+    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
     <form>
       <input type="radio" name="char" id="rat" />
       <img src="assets/rat.png" height="100px" />
